[gd_scene load_steps=7 format=3 uid="uid://djfvpbucf72m4"]

[ext_resource type="Script" uid="uid://c1ixbjy8vxx7" path="res://picture_frame.gd" id="1_rlx4c"]
[ext_resource type="Material" uid="uid://dt7cn4efyglmn" path="res://materials/office_mats/picture_frame_material.tres" id="2_dw53e"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dw53e"]
metallic_specular = 0.23
roughness = 0.2

[sub_resource type="PlaneMesh" id="PlaneMesh_7saub"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_dw53e")
size = Vector2(1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dw53e"]
resource_local_to_scene = true
material = ExtResource("2_dw53e")
size = Vector3(1.01, 0.01, 0.01)

[sub_resource type="BoxMesh" id="BoxMesh_111ay"]
resource_local_to_scene = true
material = ExtResource("2_dw53e")
size = Vector3(0.01, 0.99, 0.01)

[node name="PictureFrame" type="Node3D"]
script = ExtResource("1_rlx4c")

[node name="Picture" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_7saub")

[node name="TopFrame" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_dw53e")

[node name="BottomFrame" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_dw53e")

[node name="RightFrame" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_111ay")

[node name="LeftFrame" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_111ay")
